# reaper-ai

./: .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml  reaper_daemon.lua  sync-daemon.ps1
bridge/: auto_eq.py  cli.py  installer.py  ipc.py  mcp_server.py  reaper_state.py
recipes/: beatles_vocal.json
samples/99drums/[99Sounds] 99 Drum Samples/Samples/: kick-acoustic01.wav.reapeaks  kick-acoustic02.wav.reapeaks  kick-big.wav.reapeaks  kick-classic.wav.reapeaks  kick-dry.wav.reapeaks  kick-floppy.wav.reapeaks  kick-newwave.wav.reapeaks  kick-oldschool.wav.reapeaks  kick-plain.wav.reapeaks  kick-softy.wav.reapeaks  kick-tape.wav.reapeaks  kick-vinyl01.wav.reapeaks  kick-vinyl02.wav.reapeaks  perc-808.wav.reapeaks  perc-tribal.wav.reapeaks  snare-808.wav.reapeaks  snare-pinch.wav.reapeaks
tests/: test_lane_assignment.py
