[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reaper-ai"
version = "0.1.0"
description = "AI FX Chain Controller for REAPER"
requires-python = ">=3.10"

[project.scripts]
reaper-ai = "bridge.cli:main"

[tool.setuptools.packages.find]
include = ["bridge*"]
