[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reaper-ai"
version = "0.3.0"
description = "AI FX Chain Controller for REAPER"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
reaper-ai = "bridge.cli:main"
reaper-mcp = "bridge.mcp_server:main"

[tool.setuptools.packages.find]
include = ["bridge*"]
